# CometQuenchCode-

./: CMakeLists.txt  Makefile  README.md  main.cpp  reference.dox
comet/: main.cxx
comet/include/: XCOMETConstruction.h
comet/src/: XCOMETConstruction.cxx
cython/: demo.py  demoforroot.py  setup.py
cython/package/: XPostLoading.pyx  XPostOutput.pyx  XPostRootLoad.pyx  XRootFiles.pyx
data/: diff2d.cc  plotdata.py  th2dplot.cc
example/: CMakeLists.txt  Makefile  construct.cpp
include/: IFdmUnits.hpp  XCoilBase.hpp  XCoilConductor.hpp  XCoilConstruct.hpp  XCoilHandle.hpp  XCoilShell.hpp  XCoilStrip.hpp  XFieldHandle.hpp  XMagneticField.hpp  XMatAluminium.hpp  XMatCopper.hpp  XMatKapton.hpp  XMatNbTi.hpp  XMaterial.hpp  XMeshLoop.hpp  XPlotMaterial.hpp  XPostField.hpp  XPostInfoPlot.hpp  XPreProcess.hpp  XProcessHandle.hpp  XProcessManager.hpp  XQuenchContainer.hpp  XQuenchInfo.hpp  XQuenchLogger.hpp  XQuenchMiits.hpp  XQuenchOutput.hpp  XQuenchTransient.hpp  XRadiationHandle.hpp  XRootOutput.hpp  XThermalSolver.hpp  XTimeDependContainer.hpp  XTransientLoop.hpp
script/: XPostManager.py  main.py
src/: CMakeLists.txt  XCoilBase.cpp  XCoilConductor.cpp  XCoilConstruct.cpp  XCoilHandle.cpp  XCoilShell.cpp  XCoilStrip.cpp  XFieldHandle.cpp  XMagneticField.cpp  XMatAluminium.cpp  XMatCopper.cpp  XMatKapton.cpp  XMatNbTi.cpp  XMaterial.cpp  XMeshLoop.cpp  XPlotMaterial.cpp  XPostField.cpp  XPostInfoPlot.cpp  XPreProcess.cpp  XProcessManager.cpp  XQuenchContainer.cpp  XQuenchInfo.cpp  XQuenchLogger.cpp  XQuenchMiits.cpp  XQuenchOutput.cpp  XQuenchTransient.cpp  XRadiationHandle.cpp  XRootOutput.cpp  XThermalSolver.cpp  XTransientLoop.cpp
